occassions media upload

--- a/occassions/graduations.html
+++ b/occassions/graduations.html
@@ -55,7 +55,7 @@
         <a href="../lunch/fewingredients.html">Few Ingredients</a>
         <a href="../lunch/onepotmeal.html">One pot meal</a>
         <a href="../lunch/appetizers.html">Appetizers</a>
-        <a href="../lunch/deserts.html">Deserts</a>
+        <a href="../lunch/deserts.html">Desserts</a>
 
       </div>
     </div>
@@ -72,7 +72,7 @@
         <a href="../dinner/fewingredients.html">Few Ingredients</a>
         <a href="../dinner/onepotmeal.html">One pot meal</a>
         <a href="../dinner/appetizers.html">Appetizers</a>
-        <a href="../dinner/deserts.html">Deserts</a>
+        <a href="../dinner/deserts.html">Desserts</a>
       </div>
     </div>
 
@@ -134,7 +134,7 @@
   <!-- banner -->
 
   <div class="banner">
-    <img src="images/White Coffee Banner.jpg" alt="">
+    <img src="../images/grad-banner.jpeg" alt="">
   </div>
 
 
@@ -142,45 +142,45 @@
 
 
   <div class="heading">
-    <h1> Breakfast Classics ➡️ </h1>
+    <h1> Graduation Classics 🎓 </h1>
   </div>
 
 
   <!-- homepage images images -->
   <div class="responsive">
     <div class="gallery">
-      <a target="_blank" href="img_5terre.jpg">
-        <img src="images/b1.jpeg" alt="Cinque Terre">
+      <a target="_blank" href="#">
+        <img src="../images/bd-Birthday Cupcakes with Sprinkles.jpg" alt="">
       </a>
-      <div class="desc"> <a href=""> Eggs </a> </div>
+      <div class="desc"> <a href=""> Cupcakes with Sprinkles </a> </div>
       <div class="desc1"></div>
     </div>
   </div>
 
   <div class="responsive">
     <div class="gallery">
-      <a target="_blank" href="img_forest.jpg">
-        <img src="images/b2.jpg" alt="Forest">
+      <a target="_blank" href="#">
+        <img src="../images/bd-Buttery Delight.jpg" alt="">
       </a>
-      <div class="desc"><a href="">Mixed Berry Smoothie Bowls </a> </div>
+      <div class="desc"><a href="">Buttery Delight </a> </div>
     </div>
   </div>
 
   <div class="responsive">
     <div class="gallery">
-      <a target="_blank" href="img_lights.jpg">
-        <img src="images/b3.jpeg" alt="Northern Lights">
+      <a target="_blank" href="#">
+        <img src="../images/bd-Chocolate Birthday Cake.jpg" alt="">
       </a>
-      <div class="desc"><a href="">Bacon, Egg, and Cheese Sandwich</a></div>
+      <div class="desc"><a href="">Chocolate Birthday Cake</a></div>
     </div>
   </div>
 
   <div class="responsive">
     <div class="gallery">
-      <a target="_blank" href="img_mountains.jpg">
-        <img src="images/b4.jpeg" alt="Mountains">
+      <a target="_blank" href="#">
+        <img src="../images/bd-Chocolate Brownie Cake.jpg" alt="">
       </a>
-      <div class="desc"><a href="">Fried Egg, Sausage bowl</a></div>
+      <div class="desc"><a href="">Chocolate Brownie Cake</a></div>
     </div>
   </div>
   <br>
@@ -192,38 +192,38 @@
 
   <div class="responsive">
     <div class="gallery">
-      <a target="_blank" href="img_5terre.jpg">
-        <img src="images/b12.jpeg" alt="Cinque Terre">
+      <a target="_blank" href="#">
+        <img src="../images/bd-Chocolate Strawberry Jam Cake.jpg" alt="">
       </a>
-      <div class="desc"><a href="">Egg Sandwich</a></div>
+      <div class="desc"><a href="">Chocolate Strawberry Jam Cake</a></div>
       <div class="desc1"></div>
     </div>
   </div>
 
   <div class="responsive">
     <div class="gallery">
-      <a target="_blank" href="img_forest.jpg">
-        <img src="images/b10.jpg" alt="Forest">
+      <a target="_blank" href="#">
+        <img src="../images/bd-Classic Birthday Cake.jpeg" alt="">
       </a>
-      <div class="desc"><a href="">PIZZAA </a></div>
+      <div class="desc"><a href="">Classic Birthday Cake </a></div>
     </div>
   </div>
 
   <div class="responsive">
     <div class="gallery">
-      <a target="_blank" href="img_lights.jpg">
-        <img src="images/b11.jpg" alt="Northern Lights">
+      <a target="_blank" href="#">
+        <img src="../images/bd-Cookie Dough Cake.webp" alt="">
       </a>
-      <div class="desc"><a href="">Doughnuts</a></div>
+      <div class="desc"><a href="">Cookie Dough Cake</a></div>
     </div>
   </div>
 
   <div class="responsive">
     <div class="gallery">
-      <a target="_blank" href="img_mountains.jpg">
-        <img src="images/b9.jpeg" alt="Mountains">
+      <a target="_blank" href="#">
+        <img src="../images/bd-Funfetti Cupcakes.jpeg" alt="">
       </a>
-      <div class="desc"><a href="">Strawberry cream </a></div>
+      <div class="desc"><a href="">Funfetti Cupcakes </a></div>
     </div>
   </div>
   <div class="clearfix"></div>
@@ -231,38 +231,38 @@
 
   <div class="responsive">
     <div class="gallery">
-      <a target="_blank" href="img_5terre.jpg">
-        <img src="images/b1.jpeg" alt="Cinque Terre">
+      <a target="_blank" href="#">
+        <img src="../images/bd-Kit Kat Cake.jpeg" alt="">
       </a>
-      <div class="desc"> <a href=""> Eggs </a> </div>
+      <div class="desc"> <a href="">Kit Kat Cake</a> </div>
       <div class="desc1"></div>
     </div>
   </div>
 
   <div class="responsive">
     <div class="gallery">
-      <a target="_blank" href="img_forest.jpg">
-        <img src="images/b2.jpg" alt="Forest">
+      <a target="_blank" href="#">
+        <img src="../images/bd-Pretty in Pink Buttercream Cake.jpg" alt="">
       </a>
-      <div class="desc"><a href="">Mixed Berry Smoothie Bowls </a> </div>
+      <div class="desc"><a href="">Pink Buttercream Cake </a> </div>
     </div>
   </div>
 
   <div class="responsive">
     <div class="gallery">
-      <a target="_blank" href="img_lights.jpg">
-        <img src="images/b3.jpeg" alt="Northern Lights">
+      <a target="_blank" href="#">
+        <img src="../images/bd-Very Vanilla Cupcakes .webp" alt="">
       </a>
-      <div class="desc"><a href="">Bacon, Egg, and Cheese Sandwich</a></div>
+      <div class="desc"><a href="">Vanilla Cupcakes</a></div>
     </div>
   </div>
 
   <div class="responsive">
     <div class="gallery">
-      <a target="_blank" href="img_mountains.jpg">
-        <img src="images/b4.jpeg" alt="Mountains">
+      <a target="_blank" href="#">
+        <img src="../images/bd-Yoghurt cake with Companion.png" alt="">
       </a>
-      <div class="desc"><a href="">Fried Egg, Sausage bowl</a></div>
+      <div class="desc"><a href="">Yoghurt cake with Companion</a></div>
     </div>
   </div>
   <br>
@@ -272,26 +272,28 @@
 
   <!-- footer banner -->
   <div class="banner1">
-    <img src="images/bottombanner.jpg" alt="">
+    <img src="../images/grad-bannerbottom.jpeg" alt="">
   </div>
+
+
 
 
   <!-- footer -->
   <footer>
     <div class="footer">
       <div class="navbar-right">
-        <a class="logo">Msosii.🍜</a>
+        <a href="../home.html" class="logo">Msosii.🍜</a>
       </div>
       <div class="footer-content">
-        <p><a href="#">Home</a></p><br>
-        <p><a href="breakfast/appetizer.html">Breakfast</a></p><br>
-        <p><a href="dinner/deserts.html">Dinner</a></p><br>
-        <p><a href="lunch/maindishes.html">Lunch</a></p><br>
+        <p><a href="../home.html">Home</a></p><br>
+        <p><a href="../breakfast/appetizer.html">Breakfast</a></p><br>
+        <p><a href="../dinner/deserts.html">Dinner</a></p><br>
+        <p><a href="../lunch/maindishes.html">Lunch</a></p><br>
       </div>
       <div class="footer-content1">
-        <p><a href="occassions/weddings.html">Ocassions</a></p><br>
-        <p><a href="tips/ingredients.html">Tips</a></p><br>
-        <p><a href="news/celebrity.html">News</a></p>
+        <p><a href="../occassions/weddings.html">Ocassions</a></p><br>
+        <p><a href="../tips/ingredients.html">Tips</a></p><br>
+        <p><a href="../news/celebrity.html">News</a></p>
       </div>
       <div class="footer-content2">
         <p><a href="#">About Us</a></p><br>
