--- a/occassions/memorial.html
+++ b/occassions/memorial.html
@@ -55,7 +55,7 @@
         <a href="../lunch/fewingredients.html">Few Ingredients</a>
         <a href="../lunch/onepotmeal.html">One pot meal</a>
         <a href="../lunch/appetizers.html">Appetizers</a>
-        <a href="../lunch/deserts.html">Deserts</a>
+        <a href="../lunch/deserts.html">Desserts</a>
 
       </div>
     </div>
@@ -72,7 +72,7 @@
         <a href="../dinner/fewingredients.html">Few Ingredients</a>
         <a href="../dinner/onepotmeal.html">One pot meal</a>
         <a href="../dinner/appetizers.html">Appetizers</a>
-        <a href="../dinner/deserts.html">Deserts</a>
+        <a href="../dinner/deserts.html">Desserts</a>
       </div>
     </div>
 
@@ -134,53 +134,52 @@
   <!-- banner -->
 
   <div class="banner">
-    <img src="images/White Coffee Banner.jpg" alt="">
+    <img src="../images/mem-banner.jpg" alt="">
   </div>
 
 
   <!-- Centered link -->
 
-
   <div class="heading">
-    <h1> Breakfast Classics ➡️ </h1>
+    <h1> Memorial 🕊️ </h1>
   </div>
 
 
   <!-- homepage images images -->
   <div class="responsive">
     <div class="gallery">
-      <a target="_blank" href="img_5terre.jpg">
-        <img src="images/b1.jpeg" alt="Cinque Terre">
+      <a target="_blank" href="#">
+        <img src="../images/xmass-Blackberry Chocolate Cupcakes.jpg" alt="">
       </a>
-      <div class="desc"> <a href=""> Eggs </a> </div>
+      <div class="desc"> <a href=""> Blackberry Chocolate Cupcakes </a> </div>
       <div class="desc1"></div>
     </div>
   </div>
 
   <div class="responsive">
     <div class="gallery">
-      <a target="_blank" href="img_forest.jpg">
-        <img src="images/b2.jpg" alt="Forest">
+      <a target="_blank" href="#">
+        <img src="../images/xmass-Candy Cane Blossoms Cookies.jpg" alt="">
       </a>
-      <div class="desc"><a href="">Mixed Berry Smoothie Bowls </a> </div>
+      <div class="desc"><a href="">Candy Cane Blossoms Cookies </a> </div>
     </div>
   </div>
 
   <div class="responsive">
     <div class="gallery">
-      <a target="_blank" href="img_lights.jpg">
-        <img src="images/b3.jpeg" alt="Northern Lights">
+      <a target="_blank" href="#">
+        <img src="../images/xmass-Chocolate orange Christmas pudding.jpg" alt="">
       </a>
-      <div class="desc"><a href="">Bacon, Egg, and Cheese Sandwich</a></div>
+      <div class="desc"><a href="">Chocolate orange Christmas pudding</a></div>
     </div>
   </div>
 
   <div class="responsive">
     <div class="gallery">
-      <a target="_blank" href="img_mountains.jpg">
-        <img src="images/b4.jpeg" alt="Mountains">
+      <a target="_blank" href="#">
+        <img src="../images/xmass-Christmas Crack Toffee.jpeg" alt="">
       </a>
-      <div class="desc"><a href="">Fried Egg, Sausage bowl</a></div>
+      <div class="desc"><a href="">Christmas Crack Toffee</a></div>
     </div>
   </div>
   <br>
@@ -192,38 +191,38 @@
 
   <div class="responsive">
     <div class="gallery">
-      <a target="_blank" href="img_5terre.jpg">
-        <img src="images/b12.jpeg" alt="Cinque Terre">
+      <a target="_blank" href="#">
+        <img src="../images/xmass-Christmas Cut-Out Sugar Cookies.jpeg" alt="">
       </a>
-      <div class="desc"><a href="">Egg Sandwich</a></div>
+      <div class="desc"><a href="">Cut-Out Sugar Cookies</a></div>
       <div class="desc1"></div>
     </div>
   </div>
 
   <div class="responsive">
     <div class="gallery">
-      <a target="_blank" href="img_forest.jpg">
-        <img src="images/b10.jpg" alt="Forest">
+      <a target="_blank" href="#">
+        <img src="../images/xmass-Coconut Macaroons.jpg" alt="">
       </a>
-      <div class="desc"><a href="">PIZZAA </a></div>
+      <div class="desc"><a href="">Coconut Macaroons</a></div>
     </div>
   </div>
 
   <div class="responsive">
     <div class="gallery">
-      <a target="_blank" href="img_lights.jpg">
-        <img src="images/b11.jpg" alt="Northern Lights">
+      <a target="_blank" href="#">
+        <img src="../images/xmass-Rice Krispie Treats.jpg" alt="">
       </a>
-      <div class="desc"><a href="">Doughnuts</a></div>
+      <div class="desc"><a href="">Rice Krispie Treats</a></div>
     </div>
   </div>
 
   <div class="responsive">
     <div class="gallery">
-      <a target="_blank" href="img_mountains.jpg">
-        <img src="images/b9.jpeg" alt="Mountains">
+      <a target="_blank" href="#">
+        <img src="../images/xmass-Shortbread Cookies.jpg" alt="">
       </a>
-      <div class="desc"><a href="">Strawberry cream </a></div>
+      <div class="desc"><a href="">Shortbread Cookies </a></div>
     </div>
   </div>
   <div class="clearfix"></div>
@@ -231,38 +230,38 @@
 
   <div class="responsive">
     <div class="gallery">
-      <a target="_blank" href="img_5terre.jpg">
-        <img src="images/b1.jpeg" alt="Cinque Terre">
+      <a target="_blank" href="#">
+        <img src="../images/xmass-Spritz Cookies.jpg" alt="">
       </a>
-      <div class="desc"> <a href=""> Eggs </a> </div>
+      <div class="desc"> <a href=""> Spritz Cookies</a> </div>
       <div class="desc1"></div>
     </div>
   </div>
 
   <div class="responsive">
     <div class="gallery">
-      <a target="_blank" href="img_forest.jpg">
-        <img src="images/b2.jpg" alt="Forest">
+      <a target="_blank" href="#">
+        <img src="../images/xmass-Stacked Christmas Tree Cookies.jpg" alt="">
       </a>
-      <div class="desc"><a href="">Mixed Berry Smoothie Bowls </a> </div>
+      <div class="desc"><a href="">Stacked Christmas Tree Cookies </a> </div>
     </div>
   </div>
 
   <div class="responsive">
     <div class="gallery">
-      <a target="_blank" href="img_lights.jpg">
-        <img src="images/b3.jpeg" alt="Northern Lights">
+      <a target="_blank" href="#">
+        <img src="../images/xmass-Sugar Cookies with a Fresh Twist.jpg" alt="">
       </a>
-      <div class="desc"><a href="">Bacon, Egg, and Cheese Sandwich</a></div>
+      <div class="desc"><a href="">Sugar Cookies with a Fresh Twist</a></div>
     </div>
   </div>
 
   <div class="responsive">
     <div class="gallery">
-      <a target="_blank" href="img_mountains.jpg">
-        <img src="images/b4.jpeg" alt="Mountains">
+      <a target="_blank" href="#">
+        <img src="../images/x-mass-sprinkle-cookies-1204201.webp" alt="">
       </a>
-      <div class="desc"><a href="">Fried Egg, Sausage bowl</a></div>
+      <div class="desc"><a href="">sprinkle cookies</a></div>
     </div>
   </div>
   <br>
@@ -272,7 +271,7 @@
 
   <!-- footer banner -->
   <div class="banner1">
-    <img src="images/bottombanner.jpg" alt="">
+    <img src="../images/mem-bannerbottom.jpg" alt="">
   </div>
 
 
@@ -280,18 +279,18 @@
   <footer>
     <div class="footer">
       <div class="navbar-right">
-        <a class="logo">Msosii.🍜</a>
+        <a href="../home.html" class="logo">Msosii.🍜</a>
       </div>
       <div class="footer-content">
-        <p><a href="#">Home</a></p><br>
-        <p><a href="breakfast/appetizer.html">Breakfast</a></p><br>
-        <p><a href="dinner/deserts.html">Dinner</a></p><br>
-        <p><a href="lunch/maindishes.html">Lunch</a></p><br>
+        <p><a href="../home.html">Home</a></p><br>
+        <p><a href="../breakfast/appetizer.html">Breakfast</a></p><br>
+        <p><a href="../dinner/deserts.html">Dinner</a></p><br>
+        <p><a href="../lunch/maindishes.html">Lunch</a></p><br>
       </div>
       <div class="footer-content1">
-        <p><a href="occassions/weddings.html">Ocassions</a></p><br>
-        <p><a href="tips/ingredients.html">Tips</a></p><br>
-        <p><a href="news/celebrity.html">News</a></p>
+        <p><a href="../occassions/weddings.html">Ocassions</a></p><br>
+        <p><a href="../tips/ingredients.html">Tips</a></p><br>
+        <p><a href="../news/celebrity.html">News</a></p>
       </div>
       <div class="footer-content2">
         <p><a href="#">About Us</a></p><br>
