--- a/breakfast/appetizer.html
+++ b/breakfast/appetizer.html
@@ -9,6 +9,55 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
+<!-- css for popup -->
+<style>
+  .popup {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgb(0,0,0);
+  background-color: rgba(0,0,0,0.4);
+  padding-top: 60px;
+}
+
+button{
+          background-color: red;
+          color: white;
+          padding: 14px 20px;
+          margin: 8px 0;
+          border: none;
+          cursor: pointer;
+          width: 27%;
+          margin-left: 20px;
+}
+
+.popup-content {
+  background-color: #fefefe;
+  margin: 5% auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%;
+}
+
+.close {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
+</style>
+
 <body>
 
 
@@ -21,9 +70,31 @@
     </div>
     <a href="#"><i class="fa fa-fw fa-search"></i> Search</a>
     <a href="#"><i class="fa fa-fw fa-envelope"></i> Contact</a>
-    <a href="login.html"><i class="fa fa-fw fa-user"></i> Login</a>
+
+<!-- popup module -->
+    <a onclick="toggleLoginPopup()"><i class="fa fa-fw fa-user" ></i>Login</a>
+  
+  <div id="loginPopup" class="popup">
+    <div class="popup-content">
+      <span class="close" onclick="toggleLoginPopup()">&times;</span>
+      <h2>Login</h2>
+      <form>
+        <label for="username">Username:</label>
+        <input type="text" id="username" name="username" required><br><br>
+        <label for="password">Password:</label>
+        <input type="password" id="password" name="password" required><br><br>
+        <button type="submit">Login</button><br>
+        <label>
+          <input type="checkbox" checked="checked" name="remember"> Remember me
+        </label>
+    
+      </form>
+    </div>
+  </div>
+  <!-- module end -->
 
   </div>
+  
 
   <br>
 
@@ -322,6 +393,13 @@
       <i class="fa fa-youtube"></i></div>
     </div>
   </div>
+
+  <script>
+     function toggleLoginPopup() {
+  var popup = document.getElementById('loginPopup');
+  popup.style.display = (popup.style.display === 'none' || popup.style.display === '') ? 'block' : 'none';
+}
+  </script>
 
 </body>
 
