--- a/breakfast/appetizer.html
+++ b/breakfast/appetizer.html
@@ -10,6 +10,7 @@
 </head>
 
 <!-- css for popup -->
+
 <style>
   .popup {
   display: none;
@@ -24,7 +25,7 @@
   padding-top: 60px;
 }
 
-button{
+.modulebutton{
           background-color: red;
           color: white;
           padding: 14px 20px;
@@ -83,7 +84,7 @@ button{
         <input type="text" id="username" name="username" required><br><br>
         <label for="password">Password:</label>
         <input type="password" id="password" name="password" required><br><br>
-        <button type="submit">Login</button><br>
+        <button class="modulebutton" type="submit">Login</button><br>
         <label>
           <input type="checkbox" checked="checked" name="remember"> Remember me
         </label>
